Fix errorprone issues